--- a/react-burger/src/components/AppHeader/AppHeader.module.css
+++ b/react-burger/src/components/AppHeader/AppHeader.module.css
@@ -1,5 +1,5 @@
 .header{
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   background-color: #1C1C21;
   max-width: 100%;
@@ -8,6 +8,7 @@
   justify-content: space-around;
   align-items: center;
   min-height: 88px;
+  max-width: 1980px;
 }
 
 @media (max-width: 970px) {
