--- a/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -1,8 +1,8 @@
 .main{
   margin: 0 40px 0 0;
   padding: 0;
-  min-height: 500px;
-  width: 600px;
+  max-width: 600px;
+  
 }
 
 .title{
@@ -52,11 +52,13 @@
   padding: 0;
   display: flex;
   flex-direction: row;
-  flex-wrap: warp;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 
 }
+
+
 
 
 
