--- a/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -1,6 +1,69 @@
+.burgerIngredients{
+  margin: 0;
+  padding: 100px 0 0 0;
+  max-width: 600px;
+}
+
 .main{
   margin: 0;
-  padding: 0;
-  min-height: 500px;
-  width:600px;
+  padding: 0 16px 0 16px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: white;
+
 }
+
+.card{
+  margin: 0 0 16px 13.5px;
+  padding: 0 35px 0 0;
+  height: 80px;
+  width:536px;
+  background-color: #1C1C21;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.moveElementButton{
+  margin: 0;
+  padding: 0;
+}
+
+.ingredientImage{
+  margin: 0 20px 0 24px;
+  padding: 0;
+  width: 80px;
+  height: 40px;
+}
+
+.ingredientName{
+  margin: 0 20px 0 0;
+  padding: 0;
+  width: 240px;
+}
+
+.deleteIcon{
+  margin: 0 35px 0 0;
+  padding: 0;
+}
+
+.ingridient_price{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ingridient_price_sum{
+  margin: 0 9px 0 0;
+  padding: 0;
+
+}
+
