--- a/react-burger/src/components/MainSection/MainSection.module.css
+++ b/react-burger/src/components/MainSection/MainSection.module.css
@@ -1,9 +1,9 @@
 .main{
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   background-color: #131316;
 }
