--- a/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -1,24 +1,49 @@
 .burgerIngredients{
   margin: 0;
   padding: 100px 0 0 0;
-  max-width: 600px;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+}
+
+.owerflowBlock{
+  margin: 0 0 0 0;
+  padding: 0 0 16px 0;
+  height: 464px;
+  overflow-x: hidden;
+  scroll-snap-type: x proximity;
+}
+.owerflowBlock::-webkit-scrollbar{
+  align-self: center;
+  margin: 0;
+  padding: 0;
+  width: 8px;
+  background-color: #2F2F37;
+}
+.owerflowBlock::-webkit-scrollbar-thumb{
+  background-color: #8585AD;
+  margin: 0;
 }
 
 .main{
-  margin: 0;
-  padding: 0 16px 0 16px;
+  margin: 0 0 16px 0;
+  height: 80px;
+  padding: 0;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   color: white;
-
+}
+.main:last-child{
+  margin: 0;
 }
 
 .card{
-  margin: 0 0 16px 13.5px;
-  padding: 0 35px 0 0;
+  /* margin: 0 0 16px 13.5px; */
+  margin: 0 0 0 9px;
+  padding: 0;
   height: 80px;
   width:536px;
   background-color: #1C1C21;
@@ -27,10 +52,41 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  scroll-snap-align: start;
+}
+
+
+.cardBun{
+  margin: 0 auto 0 44px;
+  padding: 0;
+  height: 80px;
+  width:536px;
+  background-color: #1C1C21;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;  
+  border-radius: 88px 88px 40px 40px;
+
+}
+
+.cardBun_last{
+  margin: 0 auto 0 44px;
+  padding: 0;
+  height: 80px;
+  width:536px;
+  background-color: #1C1C21;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;  
+  border-radius: 40px 40px 88px 88px;
 }
 
 .moveElementButton{
-  margin: 0;
+  margin: 0 8px 0 0; 
   padding: 0;
 }
 
@@ -42,18 +98,19 @@
 }
 
 .ingredientName{
-  margin: 0 20px 0 0;
+  margin: 0 auto 0 0;
   padding: 0;
   width: 240px;
 }
 
 .deleteIcon{
-  margin: 0 35px 0 0;
+  margin: 0 35px 0 24px;
   padding: 0;
+  vertical-align: middle;
 }
 
 .ingridient_price{
-  margin: 0;
+  margin: 0 0 0 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -64,6 +121,53 @@
 .ingridient_price_sum{
   margin: 0 9px 0 0;
   padding: 0;
+}
 
+.totalCost{
+  margin: 24px 20px 52px auto;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+
+}
+
+.totalCost_sum{
+  margin: 0 10px 0 0;
+  padding: 0;
+  font-size: 48px;
+  line-height: 36px;
+  font-weight: 400;
+  color: white;
+}
+
+.totalCostMoneyIcon{
+  margin: 0 41px 0 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  align-self: center;
+
+}
+
+.buttonMakeOrder{
+  margin: 0 ;
+  /* padding: 0; */
+  width: 215px;
+  height: 64px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: white;
+  background: linear-gradient(63.18deg, #801AB3 0%, #4C4CFF 100%);
+  border-radius: 64px;
+  border: none;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 40px;
 }
 
