--- a/react-burger/src/components/AppHeader/AppHeader.module.css
+++ b/react-burger/src/components/AppHeader/AppHeader.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   min-height: 88px;
   max-width: 1980px;
+  font-family: Jet Brains Mono;
 }
 
 @media (max-width: 970px) {
@@ -48,6 +49,7 @@
   height: 56px;
   background-color:#1C1C21;
   border: none;
+  font-family: Jet Brains Mono;
 }
 
 .navigationButton:hover{
