--- a/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -31,6 +31,7 @@
   line-height: 40px;
   font-weight: 700;
   color: white;
+  font-family: Jet Brains Mono;
 }
 
 .list{
@@ -41,6 +42,7 @@
   color: white;
   display: flex;
   flex-direction: row;
+  font-family: Jet Brains Mono;
 }
 
 .list_item{
@@ -59,6 +61,7 @@
   margin: 0 0 24px 0;
   padding: 0;
   color: white;
+  font-family: Jet Brains Mono;
 }
 
 .ingridient_section{
@@ -69,7 +72,6 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-
 }
 
 
