--- a/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -4,6 +4,7 @@
   width: 600px;
   display: flex;
   flex-direction: column;
+  font-family: "JetBrains Mono";
 }
 
 .owerflowBlock{
@@ -100,7 +101,10 @@
 .ingredientName{
   margin: 0 auto 0 0;
   padding: 0;
-  width: 240px;
+  font-family: Jet Brains Mono;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 .deleteIcon{
@@ -110,7 +114,7 @@
 }
 
 .ingridient_price{
-  margin: 0 0 0 0;
+  margin: 0 0 0 20px;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -121,6 +125,10 @@
 .ingridient_price_sum{
   margin: 0 9px 0 0;
   padding: 0;
+  font-family: Iceland;
+  font-size: 28px;
+  line-height: 24px;
+  font-weight: 400;
 }
 
 .totalCost{
@@ -140,21 +148,20 @@
   line-height: 36px;
   font-weight: 400;
   color: white;
+  font-family: Iceland;
 }
 
 .totalCostMoneyIcon{
-  margin: 0 41px 0 0;
+  margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  align-self: center;
-
+  width: 4vh;
+  height: 4vh;
 }
 
 .buttonMakeOrder{
-  margin: 0 ;
-  /* padding: 0; */
-  width: 215px;
+  margin: 0 0 0 41.5px;
+  padding: 0;
+  min-width: 215px;
   height: 64px;
   font-size: 16px;
   line-height: 24px;
@@ -163,11 +170,15 @@
   background: linear-gradient(63.18deg, #801AB3 0%, #4C4CFF 100%);
   border-radius: 64px;
   border: none;
-
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 20px 40px;
+}
+
+.buttonMakeOrder:hover{
+  cursor: pointer;
+  opacity: 80%;
 }
 
