--- a/react-burger/src/index.css
+++ b/react-burger/src/index.css
@@ -6,13 +6,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1920px;
+  max-width: 100%;
   background-color: #131316;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.page{
+  margin: 0 auto;
+  padding: 0;
+  max-width: calc(600px + 40px + 600px)
 }
 
 @import url(./fonts/fonts.css);
