--- a/react-burger/src/index.css
+++ b/react-burger/src/index.css
@@ -1,24 +1,13 @@
 body {
-  margin: 0 auto;
-  padding: 0;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 100%;
-  background-color: #131316;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-.page{
-  margin: 0 auto;
-  padding: 0;
-  max-width: calc(600px + 40px + 600px)
-}
-
-@import url(./fonts/fonts.css);
