--- a/react-burger/src/components/Header/Header.module.css
+++ b/react-burger/src/components/Header/Header.module.css
@@ -1,28 +1,32 @@
-@import url(../../../node_modules/@ya.praktikum/react-developer-burger-ui-components/dist/ui/box.css);
-
 .header{
+  margin: 0;
+  padding: 0;
   background-color: #1C1C21;
   max-width: 100%;
-  border: red solid 1px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
 }
 
 .contentWidth{
-  border: red solid 1px;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  min-height: 88px;
+  /* min-height: 88px; */
   font-family: Jet Brains Mono;
   min-width: calc(600px + 40px + 600px + 40px);
+  position: relative;
 
 }
 
 .buttonList{
+  margin: 0;
+  padding: 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -31,15 +35,15 @@
 }
 
 .navigationButton{
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 178px;
   height: 56px;
   background-color:#1C1C21;
   border: none;
   font-family: Jet Brains Mono;
-  border: red solid 1px;
 }
 .navigationButton:last-of-type{
 }
@@ -50,10 +54,20 @@
 }
 
 .navigationIcon{
+  margin: 0;
+  padding: 0;
 }
 
 .navigationText{
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 24px;
   color: white;
+}
+
+.logo{
+  margin: 0;
+  position: relative;
+  left: 16.8%;
 }
