--- a/react-burger/src/components/Ingridient/Ingridient.module.css
+++ b/react-burger/src/components/Ingridient/Ingridient.module.css
@@ -11,14 +11,14 @@
 }
 
 .ingridient_image{
-  margin: 0 auto 4px auto;
+  margin: 0;
   padding: 0;
   width: 240px;
   height: 120px;
 }
 
 .ingridient_price{
-  margin: 0 auto 4px auto;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -27,7 +27,7 @@
 }
 
 .ingridient_price_sum{
-  margin: 0 9px 0 0;
+  margin: 0;
   padding: 0;
   font-size: 28px;
   line-height: 24px;
