--- a/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -1,81 +1,66 @@
-.main{
-  margin: 0;
-  padding: 0;
+
+.burgerIngredients{
   width: 600px;
-  border: red solid 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  align-content: center;
+  font-family: "JetBrains Mono";
 }
 
 .owerflowBlock{
   margin: 0;
   padding: 0;
-  height: 912px;
+  height: 480px;
   overflow-x: hidden;
+  scroll-snap-type: x proximity;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .owerflowBlock::-webkit-scrollbar{
-  margin: 0;
-  padding: 0;
+  align-self: center;
   width: 8px;
-  /* height: 664px; */
   background-color: #2F2F37;
 }
 .owerflowBlock::-webkit-scrollbar-thumb{
   background-color: #8585AD;
-  height: 492px;
-  margin: 0;
 }
 
-.title{
-  margin: 0;
-  padding: 0;
-  font-size: 36px;
-  line-height: 40px;
-  font-weight: 700;
-  color: white;
-  font-family: Jet Brains Mono;
-}
-
-.list{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  border-bottom: 1px solid #1C1C21;
-  color: white;
+.totalCost{
   display: flex;
   flex-direction: row;
-  font-family: Jet Brains Mono;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.list_item{
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  height: 56px;
-  font-size: 16px;
-  line-height: 24px;
+.totalCost_sum{
+  margin-right: 9.5px;
+  font-size: 48px;
+  line-height: 36px;
+  font-weight: 400;
+  color: white;
+  font-family: Iceland;
+}
+
+.totalCostMoneyIcon{
+  transform: scale(1.5);
+}
+
+.burgerConstructorItem{
   display: flex;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+}
+
+.elementTopBottom{
+  display: flex;
+  align-content: stretch;
   justify-content: center;
 }
-
-.subtitle{
-  margin: 0;
-  padding: 0;
-  color: white;
-  font-family: Jet Brains Mono;
-}
-
-.ingridient_section{
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-
 
 
 
