--- a/react-burger/src/components/Header/Header.module.css
+++ b/react-burger/src/components/Header/Header.module.css
@@ -1,27 +1,20 @@
 .header{
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   background-color: #1C1C21;
-  max-width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  width: 100%;  
 
 }
 
 .contentWidth{
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
+  max-width: 1300px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
+  justify-items: stretch;
   align-items: center;
-  /* min-height: 88px; */
-  font-family: Jet Brains Mono;
-  min-width: calc(600px + 40px + 600px + 40px);
-  position: relative;
-
+  width: 100%;
+  margin: 0 auto;
 }
 
 .buttonList{
@@ -35,8 +28,6 @@
 }
 
 .navigationButton{
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -44,8 +35,6 @@
   background-color:#1C1C21;
   border: none;
   font-family: Jet Brains Mono;
-}
-.navigationButton:last-of-type{
 }
 
 .navigationButton:hover{
@@ -59,15 +48,15 @@
 }
 
 .navigationText{
-  margin: 0;
-  padding: 0;
   font-size: 16px;
   line-height: 24px;
   color: white;
 }
 
+.profile {
+  justify-self: flex-end;
+}
+
 .logo{
-  margin: 0;
-  position: relative;
-  left: 16.8%;
+  justify-self: center;
 }
