--- a/react-burger/src/components/Ingridient/Ingridient.module.css
+++ b/react-burger/src/components/Ingridient/Ingridient.module.css
@@ -1,5 +1,5 @@
 .ingridient{
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   position: relative;
   width: 272px;
@@ -11,14 +11,11 @@
 }
 
 .ingridient_image{
-  margin: 0;
-  padding: 0;
   width: 240px;
   height: 120px;
 }
 
 .ingridient_price{
-  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -27,7 +24,7 @@
 }
 
 .ingridient_price_sum{
-  margin: 0;
+  margin: 0 9px 0 0;
   padding: 0;
   font-size: 28px;
   line-height: 24px;
@@ -43,7 +40,6 @@
 }
 
 .ingridient_description{
-  margin: 0;
   padding: 0;
   height: 48px;
   font-size: 16px;
@@ -52,14 +48,12 @@
   display: flex;
   align-content: center;
   justify-content: center;
+  text-align: center;
   width: 100%;
   font-family: Jet Brains Mono;
-
 }
 
 .ingridient_quantity{
-  margin: 0;
-  padding: 0;
   position: absolute;
   top:0px;
   right: 0;
@@ -75,8 +69,6 @@
 }
 
 .ingridient_quantity_number{
-  margin: 0;
-  padding: 0;
   font-size: 28px;
   line-height: 24px;
   font-weight: 400;
