--- a/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -30,12 +30,12 @@
 .list{
   margin: 0;
   padding: 0;
-
   list-style: none;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  max-width: 600px;
 }
 
 .subtitle{
