--- a/react-burger/src/components/ModalOwerlay/ModalOwerlay.module.css
+++ b/react-burger/src/components/ModalOwerlay/ModalOwerlay.module.css
@@ -1,7 +1,7 @@
 .modalOwerlay {
   margin: 0;
   padding: 0;
-  background-color: #e5e5e5;
+  background-color: black;
   opacity: 0.6;
   width: 100%;
   height: 100%;
