--- a/react-burger/src/components/App/App.module.css
+++ b/react-burger/src/components/App/App.module.css
@@ -4,3 +4,12 @@
   display: flex;
   flex-direction: column;
 }
+
+.appLoading{
+  margin: 25% 0 0 0;
+  padding: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
