--- a/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
+++ b/react-burger/src/components/BurgerConstructor/BurgerConstructor.module.css
@@ -9,6 +9,10 @@
   font-family: "JetBrains Mono";
 }
 
+.hover{
+  border: solid 4px greenyellow;
+}
+
 .owerflowBlock{
   margin: 0;
   padding: 0;
