--- a/react-burger/src/components/Ingridient/Ingridient.module.css
+++ b/react-burger/src/components/Ingridient/Ingridient.module.css
@@ -10,6 +10,21 @@
   color: white;
 }
 
+.ingridient_dragging{
+  /* margin: 0; */
+  padding: 0;
+  position: relative;
+  width: 272px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  opacity: 80%;
+  cursor: move;
+  border: 0.5px solid red;
+}
+
 .ingridient:hover{
   transform: scale(105%);
   transition: 0.5s;
@@ -79,5 +94,4 @@
   line-height: 24px;
   font-weight: 400;
   color: blue;
-
 }
