--- a/react-burger/src/components/Ingridient/Ingridient.module.css
+++ b/react-burger/src/components/Ingridient/Ingridient.module.css
@@ -20,9 +20,8 @@
   justify-content: center;
   align-items: center;
   color: white;
-  opacity: 80%;
-  cursor: move;
-  border: 0.5px solid red;
+  opacity: 60%;
+  /* cursor: grab; */
 }
 
 .ingridient:hover{
