--- a/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
+++ b/react-burger/src/components/BurgerIngredients/BurgerIngredients.module.css
@@ -38,7 +38,11 @@
   max-width: 600px;
 }
 
-
+.subtitle{
+  padding: 0;
+  color: white;
+  font-family: Jet Brains Mono;
+}
 
 .ingridient_section{
   padding: 0;
