--- a/react-burger/src/components/IngredientDetails/IngredientDetails.module.css
+++ b/react-burger/src/components/IngredientDetails/IngredientDetails.module.css
@@ -1,6 +1,5 @@
 .popup{
   margin: 0;
-  padding: 0;
   width: 719px;
   height: 538px;
   position: absolute;
@@ -16,7 +15,7 @@
 }
 
 .modalHeader{
-  margin: 55px 0 0 40px;
+  margin: 0;
   padding: 0;
   display: flex;
   flex-direction: row;
@@ -54,4 +53,16 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+
+.closeIcon{
+  margin: 0;
+  padding: 0;
+  height: 24px;
+}
+
+.closeIcon:hover{
+  cursor: pointer;
+  opacity: 0.8;
 }
