--- a/react-burger/src/pages/NotFound404/not-found.module.css
+++ b/react-burger/src/pages/NotFound404/not-found.module.css
@@ -1,10 +1,24 @@
-.appLoading{
-    margin: 25% 0 0 0;
+.title{
     padding: 0;
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: center;
-    font-family: 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
   }
+
+  .section {
+    margin: 0 auto;
+    margin-top: 180px;
+    padding: 0;
+    width: 480px;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    text-align: center;
+}
+
+.link{
+  text-decoration: none;
+}
